objects/BMCServiceDesk__BMC_DiskDrive__c.object
<CustomObject>
    <description>BMC_DiskDrive: CMDB Class that stores information about the capabilities and management of disk drives. A disk drive is a machine that reads data from and writes data to a disk.   This class corresponds to the DMTF CIM_DiskDrive class.</description>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InterfaceType__c</fullName>
        <label>Interface Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Partitions__c</fullName>
        <label>Partitions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SCSIBus__c</fullName>
        <label>SCSI Bus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SCSILogicalUnit__c</fullName>
        <label>SCSI Logical Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SCSIPort__c</fullName>
        <label>SCSI Port</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SCSITargetID__c</fullName>
        <label>SCSI Target ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SectorsPerTrack__c</fullName>
        <label>Sectors Per Track</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Size__c</fullName>
        <label>Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TotalCylinders__c</fullName>
        <label>Total Cylinders</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TotalHeads__c</fullName>
        <label>Total Heads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TotalSectors__c</fullName>
        <label>Total Sectors</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TotalTracks__c</fullName>
        <label>Total Tracks</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TracksPerCylinder__c</fullName>
        <label>Tracks Per Cylinder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Disk Drive</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BMC_DiskDrive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disk Drives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>